--- a/products/cloud-iaas.html
+++ b/products/cloud-iaas.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Infrastructure as a Service
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,38 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    Quality Designs delivery model for cloud services where customers purchase access to managed IT infrastructure over the internet.  
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
+                        We provide a platform on which software can be developed and deployed.
+                        The provision of basic cloud infrastructures like virtualized servers, storage, and
+                        networking in an on-demand model, which can easily scale up and down to
+                        meet demand. 
+                        
                     </p>
                     <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        Our platform handles the complexity around operating systems
+                        and servers and leaves application developers free to concentrate on the
+                        business requirements of the software.
                     </p>
 
                     <h3 class="text-dark">How can we help you</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Uptime percentage offered in SLA </li>
+                        <li>Ease of scaling up or down in response to consumer needs </li>
+                        <li>Administration automation for deploying and managing virtual desktops and servers </li>
+                        <li>Preconfigured templates for virtual machines </li>
+                        <li>Monitoring tools providing alerts when problems are detected </li>
+                        <li>Compliance with security protocols </li>
+                        <li>Highest availability and security </li>
+                        <li>Multi-data centre </li>
+                        <li>Managed Hosting </li>
+                        <li>Back-up services </li>
+                        <li>Disaster recovery </li>
                     </ul>
 
             </div>
