--- a/products/cloud-paas.html
+++ b/products/cloud-paas.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Platform as a Service
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,32 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    Quality Designs provide a platform for building software delivered over the web.  
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
+                        Our platform offer a very good way to develop a scalable web application. 
+                        PaaS provides a platform on which software can be developed and deployed. 
+                        The platform handles the complexity around operating systems and servers and leaves application developers free to concentrate on the business requirements of the software. 
+                         
                     </p>
                     <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        We provides services like middleware, development tools, business intelligence services, and other development infrastructure  
                     </p>
 
                     <h3 class="text-dark">How can we help you</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Ease-of-building user interfaces</li>
+                        <li>Scalability</li>
+                        <li>Platform management overhead</li>
+                        <li>Workflow engine capability</li>
+                        <li>Services-enabled integration</li>
+                        <li>Development environment creation</li>
+                        <li>Upgrades and platform fixes</li>
+                        
                     </ul>
 
             </div>
