--- a/products/cloud-saas.html
+++ b/products/cloud-saas.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Software as a Service
                                     </h1>
 
                                     <!-- brief text -->
@@ -214,37 +214,47 @@
 
     <!-- page content -->
     <div class=" consulting-page container-fluid">
+        <div class="header row bg-dark d-none">
+            <div class="img px-0 col-lg-5">
+                <img src="../assets/images/heros/new/consulting.png" alt="">
+            </div>
+
+            <div class="col-lg-7 text d-flex align-items-end mb-3">
+                <h1 class="title text-primary">
+                    IT Advisory / Consulting
+                </h1>
+            </div>
+
+        </div>
 
         <div class="container row py-4 mx-auto">
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    Quality Designs IoT Services has the expertise to help you build IoT capabilities that can increase operational efficiency and increase Revenue  
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
+                        We hosts applications for customers and make the application available to them via the internet. <br> 
+                        Our business applications, including email and collaboration, customer relationship management (CRM), billing/payroll processing, enterprise resourcing planning (ERP), content management, and document editing and management. <br> 
                     </p>
                     <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        The SaaS model can reduce costs for IT infrastructure. It can also minimize some of the time spent on management tasks, because a SaaS provider is responsible for upgrades and management.  
                     </p>
 
                     <h3 class="text-dark">How can we help you</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Stay up to date with the latest releases and unlimited upgrades </li>
+                        <li>Reduce capital expenditures and eliminate up-front costs </li>
+                        <li>Free up internal resources and let our administrators do the work </li>
+                        <li>Quickly scale and only pay for what you need, when you need it </li>
+                        <li>Secure, scalable, reliable and always available IT </li>
+                        <li>Require zero infrastructure to get up and running.  </li>
+                        <li>Integrates with other web-based applications.  </li>
+                        <li>Guaranteed 99.9% availability </li>
                     </ul>
 
             </div>
