--- a/products/consulting-program.html
+++ b/products/consulting-program.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Program Management
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,32 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    We addresses the business challenges in bridging the gap between strategy and execution.
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
-                    </p>
-                    <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        Program management helps you make better decisions, enable innovation, raise
+                        confidence, solve difficult problems and provide long-lasting results. From a
+                        single business unit through to an entire enterprise, we can implement scalable
+                        solutions designed to reduce the complexities associated with organizing,
+                        optimizing and managing portfolios to deliver the most value. Our global team
+                        of project management professionals can address your company’s complex
+                        program delivery in IT, transformation and capital infrastructure programs
+                        across matrixed environments and geographies.                    
                     </p>
 
                     <h3 class="text-dark">How can we help you</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>We help clients reap benefit from investments and turn strategy into real,
+                        sustainable value.</li>
+                        <li>We help make clients’ strategies, business cases, transformation and most
+                        complex endeavours a reality, bring about the desired outcomes and
+                        deliver on the benefit they promise.</li>
+                        <li>Our Change management approaches and experience can improve
+                        transformation outcomes.</li>
                     </ul>
 
             </div>
