--- a/products/digital-crm.html
+++ b/products/digital-crm.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Customer Relationship Management
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,30 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    Quality Designs help companies bridge the ever widening span between
+                    the overflow volume of complex data and optimize their ongoing
+                    operations and realize a greater digital reach
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
-                    </p>
-                    <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        Quality Designs CRM stresses good ongoing relationships with customers.
+                        It holds that maintaining these relationships drives growth and
+                        profitability.                  
                     </p>
 
-                    <h3 class="text-dark">How can we help you</h3>
+                    <h3 class="text-dark">CRM Features &amp; Capabilities</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Customer Service:</li>
+                        <p>Knowledge bases, Ticketing systems, Live chat, Customer, support portals</p>
+                        <li>Sales:</li>
+                        <p>Creation of quotes, Order processing, Updating contact information,
+                        Sending e-mails, Sales forecasting, Evaluating employee performance</p>
+                        <li>Marketing Automation:</li>
+                        <p>Email marketing, Lead management, Lead scoring and qualification,
+                        Landing page creation, Web forms, Marketing analytics</p>
                     </ul>
 
             </div>
