--- a/products/digital-customdev.html
+++ b/products/digital-customdev.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Custom Development
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,34 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    We offer the full competence designing, creating, deploying and
+                    maintaining software for a specific set of users, functions or organizations.
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
-                    </p>
-                    <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        Quality Designs application development and maintenance service is always in
+                        tune with the evolving business requirements and acquires an IT framework that
+                        can keep up the pace of our clients. Our deep-rooted domain knowledge and
+                        experience enables us to operate in complex application environments and
+                        handle client crucial applications efficiently. Quality Designs has extensive
+                        experience in and leverages this expertise to provide customers with
+                        comprehensive Development services                 
                     </p>
 
                     <h3 class="text-dark">How can we help you</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Transform legacy applications to leverage emerging technologies</li>
+                        <li>Conduct in-depth portfolio analysis to discover growth opportunities</li>
+                        <li>Enable scalable, and efficient processes with cloud migration</li>
+                        <li>Develop highly customized workflows for multi-channel content
+                        distribution</li>
+                        <li>Enhance digital capabilities to unlock the full potential of IoT, AI, and
+                        mobile solutions</li>
+                        <li>Manages critical software applications development for leading
+                        companies, helping customers reduce cost with zero downtime.</li>
                     </ul>
 
             </div>
