--- a/products/digital-ppm.html
+++ b/products/digital-ppm.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Project Portfolio Management (PPM)
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,37 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    We manage your projects and enables program management offices
+                    (PMO’s) and project managers to easily gather status data, collect and
+                    evaluate demand requests, and track and assign resources.
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
+                        It optimize the use of resource and selection of projects to best achieve the
+                        organization’s operational, financial and strategic objectives. PPM helps users
+                        analyze how well each project and portfolio is performing based on objectives.
+                        We can help align your projects with business goals, meet business requests and
+                        demands, and help projects be more successful.                  
                     </p>
+
                     <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        The PPM solution helps centralize and mature project practices and take into
+                        account risks, issues, change requests, financial and other constraints.
                     </p>
 
                     <h3 class="text-dark">How can we help you</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Resource allocation and management</li>
+                        <li>Risk management</li>
+                        <li>Budgeting</li>
+                        <li>Scope management</li>
+                        <li>Change management</li>
+                        <li>Quality management</li>
+                        <li>Cost and benefits measurement and tracking</li>
+                        <li>Predictive capabilities</li>
                     </ul>
 
             </div>
