--- a/products/digital-ecm.html
+++ b/products/digital-ecm.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Enterprise Content Management (ECM)
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,32 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    Enterprise content management software is evolving, with solutions
+                    ranging from intelligent capture to records management and archiving,
+                    connecting information from across the enterprise with the people and
+                    systems that need it.
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
-                    </p>
-                    <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        Quality Designs ECM ensure that users can easily access up to date documents.
+                        Businesses can use ECM systems to reduce organizational risk and ensure that
+                        users get the documents and information they need.                  
                     </p>
 
-                    <h3 class="text-dark">How can we help you</h3>
+                    <h3 class="text-dark">Key Features &amp; Capabilities</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Capture, Imaging</li>
+                        <li>File Sync, Storage, Archiving</li>
+                        <li>Document Management</li>
+                        <li>Records Management</li>
+                        <li>Search &amp; Retrieval</li>
+                        <li>Collaboration</li>
+                        <li>Content Publishing &amp; Creation</li>
+                        <li>Security, Risk Management &amp; Information Governance</li>
+                        <li>Integrations</li>
                     </ul>
 
             </div>
