--- a/products/digital-erp.html
+++ b/products/digital-erp.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Enterprise Resource Planning (ERP)
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,32 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    We deploy a single, comprehensive solution that automatically pull
+                    systems and processes together to manage business activities.
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
-                    </p>
-                    <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        Our adaptable business management solution software that handles all the
+                        resources required in the business. It does this by integrating all the information
+                        flowing through the various departments. Quality designs offer both on-premise
+                        and Cloud-based ERP.                  
                     </p>
 
-                    <h3 class="text-dark">How can we help you</h3>
+                    <h3 class="text-dark">Key Features and capabilities</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Accounting</li>
+                        <li>Inventory Management</li>
+                        <li>Human Resource Management</li>
+                        <li>Reporting and Analytics</li>
+                        <li>Project Financial Management</li>
+                        <li>Risk Management</li>
+                        <li>Logistics</li>
+                        <li>Manufacturing</li>
+                        <li>Supply Chain Management</li>
+                        <li>Product Lifecycle Management</li>
                     </ul>
 
             </div>
