--- a/products/digital-payroll.html
+++ b/products/digital-payroll.html
@@ -182,7 +182,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        IoT CONSULTING SERVICES
+                                        Payroll
                                     </h1>
 
                                     <!-- brief text -->
@@ -219,32 +219,31 @@
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
                 <h3 >
-                    Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments. 
+                    Payroll software centralizes the myriad payroll processes onto one
+                    platform and provides a variety of tools to make payroll functions more
+                    efficient and accurate.
                 </h3>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We bridge the gap between the physical and the digital world, IoT offers a huge opportunity for companies. We help clients effectively capitalize on IoT technology solutions 
-                    </p>
-                    <p>
-                        IoT combines connectivity with seonsors, devices and people enabling a form of free flowing between man and machine, software and hardware
+                        Our payroll solution will prevent human errors when calculating and
+                        administering payroll, as well as allow employees to self-service some functions
+                        to reduce administrative overhead.                  
                     </p>
 
-                    <h3 class="text-dark">How can we help you</h3>
+                    <h3 class="text-dark">Payroll Features &amp; Capabilities</h3>
                     <ul>
-                        <li><h6>Improving production and operations</h6> </li>
-                        <!-- <li> -->
-                            <p>
-                                A smart factory can provide you with a dynamic, predictive, analytics, virtual reality, and artificial intelligence to deliver unprecidented perfomance.
-                                The benefits provided by a smart factory include the ability to achieve improved service levels and savings across labour, maintanance, energy, rework, waranty and overhead costs and working capital enabled by IoT.
-                            </p>
-                        <!-- </li> -->
-                        <li><h6>Detecting and responding to network events</h6> </li>
-                        <p>
-                            IoT solutions require security, privacy, safety, reliability and resiliance. We detect and respond to events on the network
-                        </p>
+                        <li>Calculating employee pay</li>
+                        <li>Automatically calculating deductions</li>
+                        <li>Direct deposit check processing</li>
+                        <li>Generating tax forms</li>
+                        <li>Maintaining payroll history for each employee</li>
+                        <li>Administering benefit plans</li>
+                        <li>Managing retirement plans</li>
+                        <li>Payroll tracking and auditing</li>
+                        <li>Employee self-service</li>
                     </ul>
 
             </div>
